cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_312.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:286: error: DEAD_STORE
  The value written to &out (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/des_enc.c:286:13: Write of unused value
284.               tout0 ^= xor0;
285.               tout1 ^= xor1;
286.               l2cn(tout0, tout1, out, l + 8);
                   ^
287.               xor0 = t0;
288.               xor1 = t1;
